test/files/neg/macro-bundle-need-qualifier.check
macro-bundle-need-qualifier.scala:10: error: not found: value impl
  def foo: Any = macro impl
                       ^
one error found
